--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   image_picker: ^1.1.1
   percent_indicator: ^4.2.3
   flutter_slidable: ^3.1.0
+  get: ^4.6.6
+  google_fonts: ^6.2.1
+  firebase_database: ^10.5.7
 
 
 dev_dependencies:
