--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,12 +42,13 @@ dependencies:
   gap: ^3.0.1
   provider: ^6.1.2
   firebase_storage: ^11.7.5
-  image_picker: ^1.1.1
+  image_picker: ^1.1.2
   percent_indicator: ^4.2.3
   flutter_slidable: ^3.1.0
   get: ^4.6.6
   google_fonts: ^6.2.1
   firebase_database: ^10.5.7
+  flutter_svg: ^2.0.14
 
 
 dev_dependencies:
